# Forge-SLM-Platform

./: Forge_Architecture_Blueprint.docx  Project_Review_Report_Madhav_S.docx  Quickstart.md  README.md  diagnose_docker.py  forge_architecture_blueprint.html  messy_hr_dataset.csv  pyproject.toml
app/: auth_utils.py  backend.tar  dataset_processor.py  docker_manager.py  main.py  models.py  rag_worker.py  schemas.py  seeder.py
app/migrations/: 002_add_dataset_pipelines.sql  apply_migrations.py
app/routes/: conversations.py  datasets.py  documents.py  inference.py  settings.py  training.py
forge-step2-dashboard-shell/forge/: package-lock.json  package.json  tsconfig.json
forge-step2-dashboard-shell/forge/src/: proxy.ts
forge-step2-dashboard-shell/forge/src/app/: globals.css  layout.tsx  page.tsx
forge-step2-dashboard-shell/forge/src/components/: theme-toggle.tsx
forge-step2-dashboard-shell/forge/src/lib/: chat-config.ts  config.ts
forge-step2-dashboard-shell/forge/src/types/: api.ts
forge_api_system/forge_api_system/app/: models.py  pii_scanner.py
forge_api_system/forge_api_system/app/migrations/: apply_migrations.py
forge_api_system/forge_api_system/app/routes/: api_keys.py  inference.py
frontend/: changes made for rag params(sliders).md  package-lock.json  package.json  src (2).tar  src.tar  tsconfig.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: markdown-renderer.tsx  theme-toggle.tsx
frontend/src/lib/: chat-config.ts  config.ts
frontend/src/types/: api.ts
(+133 files in other folders)
