[project]
name = "slm-platform"
version = "0.1.0"
description = "Completely self-contained FastAPI backend architecture with native inference runtime."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "aiofiles>=25.1.0",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "datasets>=5.0.0",
    "docker>=7.1.0",
    "fastapi[standard]>=0.137.1",
    "fastembed>=0.8.0",
    "gguf>=0.19.0",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "peft>=0.19.1",
    "pgvector>=0.4.2",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "pymupdf>=1.27.2.3",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.32",
    "sentencepiece>=0.2.1",
    "sqlalchemy>=2.0.51",
    "sse-starlette>=3.4.4",
    "psutil>=5.9.0",
    "torch>=2.12.0",
    "transformers>=5.12.1",
    "uvicorn>=0.49.0",
    "datasketch>=1.10.0",
    "langchain-text-splitters>=1.1.2",
    "pandas>=3.0.3",
    "openpyxl>=3.1.5",
    "xlrd>=2.0.2",
]

[tool.fastapi]
entrypoint = "app.main:app"
